# AP1-FlightSimulator-CommunicationAndSearchAlg

./: AStar.h  AbstractSearch.h  AbstractServer.h  BestFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  Cell.cpp  Cell.h  ClientHandler.h  DepthFirstSearch.h  FIleCacheManager.cpp  FileCacheManager.cpp  FileCacheManager.h  ISearchable.cpp  ISearchable.h  ISearcher.cpp  ISearcher.h  Main.cpp  Main.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OpenServerTask.cpp  OpenServerTask.h  README.md  Runnable.h  RunnableTask.cpp  RunnableTask.h  Searcher.h  Server.h  Solver.h  (+10 more)
Second milestone - client, server, search alg/comp/: graphs.txt  solution.txt  test_parallel.py  test_serial.py
